--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -212,7 +212,7 @@ Localization
 		//	============================================================================
 		//		ROC-GeminiNoseconeBDB
 		#rocGeminiNoseconeBDBTitle = Gemini Nose Docking Mechanism
-		#rocGeminiNoseconeBDBDesc = One of the most crucial skills that the Gemini program is meant to develop is the ability to rendevous and dock in space. This simple docking mechanism doesn't have the ability to transfer crew or resources, but it will allow you to connect two vessels in flight. This male active docking mechanism corresponds to the female Agena Docking Adapter. It include an indexing key, that slides into the V shape on the Agena Docking Adapter, to help line the two craft up properly.
+		#rocGeminiNoseconeBDBDesc = One of the most crucial skills that the Gemini program is meant to develop is the ability to rendezvous and dock in space. This simple docking mechanism doesn't have the ability to transfer crew or resources, but it will allow you to connect two vessels in flight. This male active docking mechanism corresponds to the female Agena Docking Adapter. It include an indexing key, that slides into the V shape on the Agena Docking Adapter, to help line the two craft up properly.
 		//	============================================================================
 		//		ROC-GeminiNoseconeAeroBDB
 		#roGeminiNoseconeAeroBDBTitle = Gemini Nose Fairing
@@ -249,6 +249,50 @@ Localization
 		//		ROC-GeminiRetrogradeSectionBDB
 		#roGeminiRetrogradeSectionBDBTitle = Gemini Retrograde Section
 		#roGeminiRetrogradeSectionBDBDesc = This hollow structural adapter is designed to sit on top of the Gemini equipment section and house a quad of retro motors for reentry. Houses six translational control thrusters.
+		//	============================================================================
+		//		ROC-BigGeminiCabinBDB
+		#roBigGeminiCabinBDBTitle = Big G Crew Module
+		#roBigGeminiCabinBDBDesc = As operations in space become more complex, more crew members are needed. This expanded crew module replaces the standard Gemini service module, allowing seven additional crew members to ride to space. To be used with either a modified Apollo Service Module for deep space operations, or the Big Gemini Service Module for LEO operations.
+		//	============================================================================
+		//		ROC-BigGeminiDecoupler
+		#roBigGeminiDecouplerTitle = Big G Service Module Decoupler
+		#roBigGeminiDecouplerDesc = This decoupler is designed to sit between a capsule's heatshield, and the service module. It includes an umbilical to connect the capsule to the service module's systems.
+		//	============================================================================
+		//		ROC-BigGeminiDockingAdapter
+		#roBigGeminiDockingAdapterTitle = Big G Docking Adapter
+		#roBigGeminiDockingAdapterDesc = Structural docking adapter for Big Gemini. Ideally sized for the Apollo active docking port.
+		//	============================================================================
+		//		ROC-BigGeminiHS
+		#roBigGeminiHSTitle = Big G Heat Shield
+		#roBigGeminiHSDesc = Heatshield for the Big Gemini capsule
+		//	============================================================================
+		//		ROC-BigGeminiHSLunar
+		#roBigGeminiHSLunarTitle = Big G Lunar Heat Shield
+		#roBigGeminiHSLunarDesc = Lunar heatshield for the Big Gemini capsule.  <b><color=red>Gemini lacks the radiative heat protection of more advanced capsules. Extremely gentle Lunar reentries only.</color></b>
+		//	============================================================================
+		//		ROC-BigGeminiLES
+		#roBigGeminiLESTitle = Big G Launch Escape System
+		#roBigGeminiLESDesc = This solid rocket tower is designed to wrench the command pod up and away from a malfunctioning rocket. Use only in case of emergency. WARNING: Staging the LES will also decouple it from the bottom node, in order to dispose of it after launch. Map the engine to the ABORT action group for emergency use.
+		//	============================================================================
+		//		ROC-BigGeminiMOLPort
+		#roBigGeminiMOLPortTitle = MOL Docking Mechanism
+		#roBigGeminiMOLPortDesc = This large docking module is used to connect MOL segments to each other. It is capable of soft docking to line up the segments, before retracting and solidifying the connection.
+		//	============================================================================
+		//		ROC-BigGeminiNose
+		#roBigGeminiNoseTitle = Big G Nose Fairing
+		#roBigGeminiNoseDesc = This is an enlarged Gemini nose fairing to allow the installation of larger parachutes for Big Gemini. All rendezvous and docking equipment has been removed to save weight.
+		//	============================================================================
+		//		ROC-BigGeminiParachute
+		#roBigGeminiParachuteTitle = Big G Landing Parachute System
+		#roBigGeminiParachuteDesc = Enlarged main parachute for Big Gemini. Attaches on top of the Gemini Re-entry Control System.
+		//	============================================================================
+		//		ROC-BigGeminiParachuteDrogue
+		#roBigGeminiParachuteDrogueTitle = Big G Drogue Parachute
+		#roBigGeminiParachuteDrogueDesc = Enlarged drogue parachute for the Big Gemini. Attach to the node in the nose section.
+		//	============================================================================
+		//		ROC-BigGeminiSM
+		#roBigGeminiSMTitle = Big G Service Module
+		#roBigGeminiSMDesc = A large 2.5m+ service module for the 1969 Big Gemini concept. Includes a large pressurized volume in the aft for cargo and crew space. This Service Module is also compatible with Apollo (although it will need a custom adapter, and the internal compartment will be inaccessable since Apollo doesn't have a hatch in it's heat shield), and the Apollo Service Module is also compatible with Big Gemini (Adapter not included). NOTE: This contains no propulsion, add RCS thrusters.
 		//	============================================================================
 	}
 }
