--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
@@ -12,6 +12,7 @@ PART
 		model = ROCapsules/Assets/BDB/Gemini/bluedog_BigG_Cabin
 		rotation = 0, 180, 0
 	}
+
 	scale = 1
 	rescaleFactor = 1.524
 	node_stack_bottom = 0.0, -0.64679, 0.0, 0.0, -1.0, 0.0, 2
@@ -19,18 +20,20 @@ PART
 	attachRules = 1,0,1,1,0
 	CoPOffset = 0.0, 0.4, 0.0
 	CoLOffset = 0.0, -0.4, 0.0
+	CoMOffset = 0, -0.28, 0
 	CenterOfBuoyancy = 0.0, 0.3, 0.0
 	CenterOfDisplacement = 0.0, -0.35, 0.0
 	buoyancy = 1.5
 	buoyancyUseSine = False
-	TechRequired = commandModules
+
+	TechRequired = unlockParts
 	entryCost = 12000
 	cost = 4000
 	category = Pods
 	subcategory = 0
-	title = Big G Crew Module
-	manufacturer = McDonnell Douglas
-	description = As operations in space become more complex, more crew members are needed. This expanded crew module replaces the standard Gemini service module, allowing seven additional crew members to ride to space. To be used with either a modified Apollo Service Module for deep space operations, or the Big Gemini Service Module for LEO operations.
+	title = #roBigGeminiCabinBDBTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiCabinBDBDesc
 	mass = 3.36
 	dragModelType = default
 	maximum_drag = 0.20
@@ -66,22 +69,22 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 2.09
+			rate = 0.62
 		}
 	}
 
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0.0, 0.0, -0.1
+		DescentModeCoM = 0.0, 0.0, 0.15		//Gemini reentered "upside-down" to protect crew hatches
 	}
 
 	MODULE
 	{
 		name = ModuleFuelTanks
-		type = ServiceModule
+		type = SM-IV
 		volume = 500
-		basemass = -1
+		basemass = 3.36
 	}
 
 	MODULE
