--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDecoupler.cfg
@@ -20,17 +20,17 @@ PART
 	buoyancyUseSine = False
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
-	TechRequired = specializedControl
+	TechRequired = unlockParts
 	entryCost = 2800
 	cost = 550
 	category = Coupling
 	subcategory = 0
-	title = Big Gemini Service Module Decoupler
-	manufacturer = McDonnell Douglas
-	description = This decoupler is designed to sit between a capsule's heatshield, and the service module. It includes an umbilical to connect the capsule to the service module's systems. The decoupler automatically maps to the abort action group in case of a failure of the launch stack.
+	title = #roBigGeminiDecouplerTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiDecouplerDesc
 
 	attachRules = 1,0,1,1,0
-	mass = 0.25
+	mass = 0.05
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -48,7 +48,7 @@ PART
 	skinTempTag = Magnesium
 	internalTempTag = Titanium
 
-	tags = ?gemina break decouple separat split stack stag Apollo Kane block ?1 ?2 ?3 ?4 ?5 ?i ?ii ?iii ?iv ?v
+	tags = ?gemini break decouple separat split stack stag Apollo Kane block ?1 ?2 ?3 ?4 ?5 ?i ?ii ?iii ?iv ?v
 
 	MODULE
 	{
