--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHS.cfg
@@ -17,14 +17,14 @@ PART
 	node_stack_top = 0.0, 0.075149, 0.0, 0.0, 1.0, 0.0, 1
 	CoPOffset = 0.0, 1.0, 0.0
 	CoLOffset = 0.0, -0.15, 0.0
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 1000
 	cost = 360
 	category = Thermal
 	subcategory = 0
-	title = Big Gemini Heat Shield
-	manufacturer = McDonnell Aircraft
-	description  = Heatshield for the Big Gemini capsule
+	title = #roBigGeminiHSTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiHSDesc
 	attachRules = 1,0,1,0,0
 	mass = 0.144
 	dragModelType = default
