--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiMOLPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiMOLPort.cfg
@@ -22,17 +22,17 @@ PART
 //	stackSymmetry = 1
 
 	sound_vent_large = decouple
-	TechRequired = advConstruction
+	TechRequired = unlockParts
 	entryCost = 5000
 	cost = 1000
 	category = Coupling
 	subcategory = 0
-	title = MOL Docking Mechanism
-	manufacturer = Douglas Aircraft
-	description = This large docking module is used to connect MOL segments to each other. It is capable of soft docking to line up the segments, before retracting and solidifying the connection.
+	title = #roBigGeminiMOLPortTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiMOLPortDesc
 
 	attachRules = 1,0,1,1,1
-	mass = 0.1
+	mass = 0.350
 	dragModelType = default
 	maximum_drag = 0.19
 	minimum_drag = 0.15
