--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
@@ -15,16 +15,16 @@ PART
 	node_stack_top = 0.0, 2.3685, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -2.3685, 0.0, 0.0, -1.0, 0.0, 2
 	CrewCapacity = 3
-	TechRequired = specializedControl
+	TechRequired = unlockParts
 	entryCost = 13000
 	cost = 4800
 	category = Utility
 	subcategory = 0
-	title = Big Gemini Service Module
-	manufacturer = McDonnell Aircraft
-	description = A large 2.5m+ service module for the 1969 Big Gemini concept. Includes a large pressurized volume in the aft for cargo and crew space. This Service Module is also compatible with Apollo (although it will need a custom adapter, and the internal compartment will be inaccessable since Apollo doesn't have a hatch in it's heat shield), and the Apollo Service Module is also compatible with Big Gemini (Adapter not included). NOTE: This contains no propulsion, add RCS thrusters.
+	title = #roBigGeminiSMTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiSMDesc
 	attachRules = 1,0,1,1,0
-	mass = 3.5625
+	mass = 7.5625
 
 	CoMOffset = 0.0, -0.75, 0.0
 
@@ -60,9 +60,9 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		type = ServiceModule
+		type = SM-IV
 		volume = 17500
-		basemass = -1
+		basemass = 7.5625
 		TANK
 		{
 			name = ElectricCharge
