--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDockingAdapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDockingAdapter.cfg
@@ -16,16 +16,16 @@ PART
 	node_stack_top = 0.0, 0.39285, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.40903, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_bottom2 = 0.0, 0.33862, 0.0, 0.0, -1.0, 0.0, 2
-	TechRequired = generalConstruction
+	TechRequired = unlockParts
 	entryCost = 800
 	cost = 260
 	category = Structural
 	subcategory = 0
-	title = Big Gemini Docking Adapter
-	manufacturer = Bluedog Design Bureau
-	description = Structural docking adapter for Big Gemini. Ideally sized for the Apollo active docking port.
+	title = #roBigGeminiDockingAdapterTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiDockingAdapterDesc
 	attachRules = 1,0,1,1,0
-	mass = 0.048
+	mass = 0.100
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
