--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
@@ -17,14 +17,14 @@ PART
 	node_stack_top = 0.0, 0.075149, 0.0, 0.0, 1.0, 0.0, 1
 	CoPOffset = 0.0, 1.0, 0.0
 	CoLOffset = 0.0, -0.15, 0.0
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 1000
 	cost = 360
 	category = Thermal
 	subcategory = 0
-	title = Big Gemini Lunar Heat Shield
-	manufacturer = McDonnell Aircraft
-	description  = Lunar heatshield for the Big Gemini capsule.  <b><color=red>Gemini lacks the radiative heat protection of more advanced capsules. Extremely gentle Lunar reentries only.</color></b>
+	title = #roBigGeminiHSLunarTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiHSLunarDesc
 	attachRules = 1,0,1,0,0
 	mass = 0.144
 	dragModelType = default
