--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiLES.cfg
@@ -15,17 +15,16 @@ PART
 	node_stack_bottom = 0.0, -1.606, 0.0, 0.0, -1.0, 0.0, 0
 	sound_vent_large = decouple
 	fx_gasBurst_white = 0.0, -0.269, 0.0, 0.0, -1.0, 0.0, decouple
-	TechRequired =  survivability
+	TechRequired =  unlockParts
 	entryCost = 4500
 	cost = 350
 	category = Utility
 	subcategory = 0
-	title = Gemini Launch Escape System
-	manufacturer = McDonnell Aircraft
-	description = This solid rocket tower is designed to wrench the command pod up and away from a malfunctioning rocket. Use only in case of emergency. WARNING: Staging the LES will also decouple it from the bottom node, in order to dispose of it after launch. Map the engine to the ABORT action group for emergency use. Designed for advanced Leo variants launched on anything bigger than a Prometheus II.
+	title = #roBigGeminiLESTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiLESDesc
 	attachRules = 1,0,1,1,0
-	mass = 0.3
-	// heatConductivity = 0.04 // 1/3 default
+	mass = 2.0
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
