Use StagedAnimation for Vostok decoupler

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokDecoupler.cfg
@@ -67,7 +67,7 @@ PART
 	//	Modules and Resources
 	//	============================================================================
 
-	MODULE:NEEDS[!AnimatedDecouplers]
+	MODULE
 	{
 		name = ModuleDecouple
 		menuName = Jettison Service Module
@@ -75,27 +75,12 @@ PART
 		isOmniDecoupler = false
 		explosiveNodeID = top
 	}
-
-	MODULE:NEEDS[!AnimatedDecouplers]
+	MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = Deploy
-		isOneShot = false
-		startEventGUIName = Disconnect Wires
-		endEventGUIName = Reconnect Wires
-		toggleActionName = Toggle Wires
-		allowAnimationWhileShielded = False
-	}
-
-	MODULE:NEEDS[AnimatedDecouplers]
-	{
-		name = ModuleAnimatedDecoupler
-		menuName = Jettison Service Module
-		ejectionForce = 40
-		explosiveNodeID = top
+		name = ModuleStagedAnimation
 		staged = true
 		animationName = Deploy
-		waitForAnimation = false
+		waitForAnimation = false 
 		layer = 1
 	}
 }
