Vostok/Voskhod Overhaul (#148)
* Vostok improvements

Improve Vostok config, including switching to non-massless tanks, adjusting spacecraft mass to be more accurate, and limiting engine to one ignition.

* Screw it, get Voskhod and Zenit too

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -1,3 +1,12 @@
+	//sources:
+	// https://en.wikipedia.org/wiki/Vostok_(spacecraft)	honestly pretty good, and other sources are bad
+	// http://www.b14643.de/Spacerockets/Specials/KB-Isayev_KDUs/index.htm
+	// http://www.astronaut.ru/bookcase/article/article130.htm?reload_coolmenus
+	// http://www.buran.ru/htm/gud%2018.htm
+	// https://ru.wikipedia.org/wiki/%D0%92%D0%BE%D1%81%D1%82%D0%BE%D0%BA_(%D0%BA%D0%BE%D1%81%D0%BC%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%BA%D0%BE%D1%80%D0%B0%D0%B1%D0%BB%D1%8C)
+	// http://www.astronautix.com/s/s54.html
+	// http://www.lpre.de/kbhm/index.htm
+
 PART
 {
 	name = ROC-VostokCapsule
@@ -40,7 +49,7 @@ PART
 	category = Pods
 	subcategory = 0
 	title = Vostok Descent Module
-	manufacturer = OKB-1
+	manufacturer = #roMfrOKB1
 	description = The Vostok SA Descent Module was the first spacecraft to carry humans into space when Yuri Gagarin flew on April 12, 1961. The SA stands for Spuskaemiy Apparat (Descent System) and was designed as a ballistic reentry capsule. [Diameter 2.3 m]
 	tags = vostok, gagarin, soviet, capsule, crew, descent
 
@@ -53,7 +62,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.809 // + 450kg ablator
+	mass = 0.933 //2460 kg wet. 484 kg ablator, 670 kg batteries, crew+chute 129 kg, 113 kg supplies, 40 kg tanks, 21 kg antenna, 70 kg chute. 
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -63,7 +72,7 @@ PART
 	breakingTorque = 250
 	fuelCrossFeed = True
 
-	heatShieldDiameter = 4.243 // really 2.3, but tweak to apply more ablator
+	heatShieldDiameter = 4.4 // really 2.3, but tweak to apply more ablator
 	heatShieldTag = Mercury
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
@@ -100,14 +109,14 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 189.59
-		type = ServiceModule
-		basemass = -1
+		volume = 600
+		type = SM-II
+		basemass = 0.933
 		TANK
 		{
 			name = ElectricCharge
-			amount = 1000
-			maxAmount = 1000
+			amount = 232000
+			maxAmount = 232000
 		}
 	}
 
