--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiNose.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiNose.cfg
@@ -1,7 +1,6 @@
 PART
 {
-
-	name = ROC-GeminiNoseconeAeroBDB
+	name = ROC-BigGeminiNose
 	module = Part
 	author = Cobaltwolf
 
@@ -9,14 +8,13 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/BDB/Gemini/bluedog_Gemini_LunarRecon_Camera
-		rotation = 0, 180, 0
+		model = ROCapsules/Assets/BDB/Gemini/bluedog_BigG_Nose
 	}
 
 	scale = 1
 	rescaleFactor = 1.524
-	node_stack_bottom = 0.0, -0.22171, 0.0, 0.0, -1.0, 0.0, 0
-	node_stack_top = 0.0,  0.4234, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_bottom = 0.0, -0.23812, 0.0, 0.0, -1.0, 0.0, 0
+	node_stack_top    = 0.0,  0.33145, 0.0, 0.0, 1.0, 0.0, 0
 	
 	NODE
 	{
@@ -32,14 +30,14 @@ PART
 	cost = 210
 	category = Coupling
 	subcategory = 0
-	title = #roGeminiNoseconeAeroBDBTitle	//Gemini Nose Fairing
-	manufacturer = #roMfrMcDonnell
-	description = #roGeminiNoseconeAeroBDBDesc
+	title = #roBigGeminiNoseTitle
+	manufacturer = #roMfrMD
+	description = #roBigGeminiNoseDesc
 	mass = 0.08657
-	dragModelType = default
-	maximum_drag = 0.20
-	minimum_drag = 0.2
-	angularDrag = 2
+	dragModelType  = default
+	maximum_drag   = 0.20
+	minimum_drag   = 0.2
+	angularDrag    = 2
 	crashTolerance = 10
 	breakingForce = 50
 	breakingTorque = 50
@@ -55,7 +53,7 @@ PART
 	internalTempTag = Titanium
 	skinInsulationTag = True
 
-	tags = gemini dock docking port gatv agena target
+	tags = gemini big g nose
 
 	MODULE
 	{
@@ -78,5 +76,13 @@ PART
 				transform = Skin
 			}
 		}
+	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = False
+		passableWhenSurfaceAttached = false
+		surfaceAttachmentsPassable = false
 	}
 }
