Use ModuleStagedAnimation for Mercury retro pack too. Close #150

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
@@ -154,6 +154,14 @@ PART
 		explosiveNodeID = top
 		stagingEnabled = True
 	}
+	MODULE
+	{
+		name = ModuleStagedAnimation
+		staged = true
+		animationName = deploy
+		waitForAnimation = false 
+		layer = 1
+	}
 
 	MODULE
 	{
