--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
@@ -8,7 +8,7 @@ PART
 	RSSROConfig = true
 
 	//	================================================================================
-	//Source for all Mercury Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+	//Source for all Mercury Masses: https://web.archive.org/web/20220911044835/http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
 	//	================================================================================
 	//Mercury Retro Module dry mass breakdown:
 	//	================================================================================
