add retrograde source to posigrade

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
@@ -101,8 +101,8 @@ PART
 
 			atmosphereCurve
 			{
-				key = 0 206
-				key = 1 85
+				key = 0 206 //No info found on posigrade motors, so I used the retrograde motor isp sourced below
+				key = 1 85 //https://www.sciencedirect.com/science/article/pii/S1000936121003319
 			}
 		}
 	}
