--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
@@ -8,7 +8,7 @@ PART
 	RSSROConfig = true
 
 	//	================================================================================
-	//Source for all Mercury Masses: https://web.archive.org/web/20220911044835/http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+	//Source for all Mercury Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
 	//	================================================================================
 	//Mercury Retro Module dry mass breakdown:
 	//	================================================================================
@@ -65,8 +65,8 @@ PART
 	//	Retro: 20.63 lbs (9.36 kg) (x3)
 	//		Dry Mass: 20.63 lbs (x3)
 	//	================================================================================
-	//	Posigrade: 1.12 lbs (0.51 kg) (x3) (removing 4.23 lbs propellant)
-	//		Dry Mass: 1.12 lbs (x3)
+	//	Posigrade: 3.15 lbs (0.51 kg) (x3) (removing 2.20 lbs propellant)
+	//		Dry Mass: 3.15 lbs (x3)
 	//	================================================================================
 	//INERT MASS: 125.35 lbs (56.86 kg)
 
@@ -76,9 +76,9 @@ PART
 	//Retro: 12.57 L (x3)
 	//	Propellant: 12.57 L
 	//		PSPC: 12.57 L
-	//Posigrade: 1.103 L (x3)
-	//	Propellant: 1.103 L
-	//		PSPC: 1.103 L
+	//Posigrade: 0.573 L (x3)
+	//	Propellant: 0.573 L
+	//		PSPC: 0.573 L
 
 	//	================================================================================
 	//Tank Mass Compensation
