Put mercury posigrade motor isp the same as retrograde motor (#152)
* better link

* make mercury posigrade motor isp same as retrograde motor

* add retrograde source to posigrade

* Decrease posigrade motor fuel load

decrease posigrade motor fuel load to keep overall impulse the same

---------

Co-authored-by: Capkirk123 <capkirk123@gmail.com>

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
@@ -25,7 +25,7 @@ PART
 	manufacturer = Thiokol
 	description = This tiny solid rocket motor was originally used to push a Mercury away from its Atlas booster. We're sure you'll think of even more uses for it.
 	attachRules = 0,1,0,0,0
-	mass = 0.000508		//1.12 lbs
+	mass = 0.00143		//3.15 lbs
 	dragModelType = default
 	maximum_drag  = 0.20
 	minimum_drag = 0.15
@@ -62,18 +62,20 @@ PART
 		%ignitions = 1
 	}
 
+	//Should provide 15 ft/s (~4.5 m/s) to Mercury spacecraft
+	//This also leaves us with a mass ratio <1, which seems reasonable for an early SRM of this size.
 	MODULE
 	{
 		name = ModuleFuelTanks
 		type = PSPC
-		volume = 1.103
+		volume = 0.573
 		basemass = -1
 
 		TANK
 		{
-			name = PSPC		//~4.23 lbs propellant
-			amount = 1.103 
-			maxAmount =	 1.103
+			name = PSPC		//~2.20 lbs propellant
+			amount = 0.573
+			maxAmount = 0.573
 		}
 	}
 
@@ -101,8 +103,8 @@ PART
 
 			atmosphereCurve
 			{
-				key = 0 107.04
-				key = 1 107.04
+				key = 0 206 //No info found on posigrade motors, so I used the retrograde motor isp sourced below
+				key = 1 85 //https://www.sciencedirect.com/science/article/pii/S1000936121003319
 			}
 		}
 	}
