Add attach node to Dyna docking rod
Add an attach node to the dyna docking rod so it can actually be attached to stuff

resolves https://github.com/KSP-RO/ROCapsules/issues/153

--- a/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingsystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingsystem.cfg
@@ -16,6 +16,7 @@ PART
 	rescaleFactor = 1.7364
 
 	node_stack_top = 0.0, 0.0, 1.83, 0.0, 0.0, -1.0, 1
+	node_attach = 0.0, -0.5759, 1.7277, 0.0, 0.0, 1.0
 
 	TechRequired = specializedConstruction
 	entryCost = 4000
@@ -26,7 +27,7 @@ PART
 	manufacturer = Boeing
 	description = Docking rod for the DynaSoar. This is where the docking arms attach.
 
-	attachRules = 1,0,1,1,1
+	attachRules = 1,1,1,1,1
 
 	mass = 0.2
 	dragModelType = default
