Add ejection seat to Vostok

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -94,6 +94,21 @@ PART
 
 	MODULE
 	{
+		name = ModuleROEjectionSeat
+		maxEjectSpeed = 900
+		maxEjectAltitude = 30000
+
+		SEAT
+		{
+			colliderOffset = 0.0, 0.35, -1.35
+			colliderRotAngles = -62.0, 0.0, 0.0
+			forceDir = 0.0, 0.4, -1.0
+			ejectDelay = 0
+		}
+	}
+
+	MODULE
+	{
 		name = ModuleSAS
 		SASServiceLevel = 3
 	}
