Improve heat resistance of Apollo D2
Improve heat resistance of Apollo D2 parts to avoid overheating on ascent.

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Adapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Adapter.cfg
@@ -62,8 +62,8 @@ PART
 	stageOffset = 1
 	childStageOffset = 1
 	
-	//Fiberglass over steel frame
-	skinTempTag = Fiberglass
+	//Aluminum over steel frame
+	skinTempTag = Aluminum
 	internalTempTag = Steel
 
 	//	============================================================================
