--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
@@ -59,8 +59,8 @@ PART
 	childStageOffset = 1
 	stagingIcon = SOLID_BOOSTER
 	
-	//Aluminum skin over Titanium structure
-	skinTempTag = Aluminum
+	//Aluminum skin over Titanium structure, with Steel nose cap
+	skinTempTag = Steel
 	internalTempTag = Titanium
 
 	//	============================================================================
