--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
@@ -63,10 +63,11 @@ PART
 	breakingTorque = 250
 	fuelCrossFeed = true
 	
-	//Aluminum skin over titanium structure
-	skinTempTag = Aluminum
+	//Aluminum skin over titanium structure, with steel nose cap
+	skinTempTag = Steel
 	internalTempTag = Instruments
 	skinInsulationTag = True
+	skinMassPerArea = 7.9				//1 mm thick stainless, 7.9 kg/m^2?
 
 	//	============================================================================
 	//	Modules and Resources
