Add APAS and CADS

--- a/GameData/ROCapsules/PartConfigs/APAS/APAS_Active.cfg
+++ b/GameData/ROCapsules/PartConfigs/APAS/APAS_Active.cfg
@@ -20,15 +20,16 @@ PART
 	attachRules = 1,0,1,0,1
 
 	RSSROConfig = True
+	RODeprecated = True		//replaced by Benjee10 APAS model
 
 	TechRequired = standardDockingPorts
 	entryCost = 2000
 	cost = 3500
 	category = Coupling
 	subcategory = 0
-	title = APAS 89/95 Active Docking Port
+	title = APAS 89/95 Active Docking Port (Deprecated)
 	manufacturer = RKK Energia
-	description = Androgynous Peripheral Attach System developed for the Shuttle-Mir program and ISS. This is the active variant, with a deployable capture ring to align the ports and dampen the impact.
+	description = Please do not use this part, it will be removed in the future.
 
 	// --- standard part parameters ---
 	mass = 0.286
