--- a/GameData/ROCapsules/PartConfigs/APAS/APAS_Passive.cfg
+++ b/GameData/ROCapsules/PartConfigs/APAS/APAS_Passive.cfg
@@ -20,15 +20,16 @@ PART
 	attachRules = 1,0,1,0,1
 
 	RSSROConfig = True
+	RODeprecated = True		//replaced by Benjee10 APAS model
 
 	TechRequired = standardDockingPorts
 	entryCost = 1000
 	cost = 3000
 	category = Coupling
 	subcategory = 0
-	title = APAS 89/95 Passive Docking Port
+	title = APAS 89/95 Passive Docking Port (Deprecated)
 	manufacturer = RKK Energia
-	description = Androgynous Peripheral Attach System developed for the Shuttle-Mir program and ISS. This is the passive variant, useful for permanent fixtures that won't have to form the active docking partner, such as berthing ports on station modules.
+	description = Please do not use this part, it will be removed in the future.
 
 
 	// --- standard part parameters ---
