Localizations and better mass

--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -8,6 +8,17 @@ Localization
 		//	============================================================================
 
 		//	============================================================================
+		//	BDB APAS
+		//	============================================================================
+		//		ROC-APAS8995Av2
+		#rocAPAS8995ATitle = APAS 89/95 Active Docking Port
+		#rocAPAS8995ADesc = Androgynous Peripheral Attach System developed for the Shuttle-Mir program and ISS. This is the active variant, with a deployable capture ring to align the ports and dampen the impact.
+		//	============================================================================
+		//		ROC-APAS8995Av2
+		#rocAPAS8995PTitle = APAS 89/95 Passive Docking Port
+		#rocAPAS8995PDesc = Androgynous Peripheral Attach System developed for the Shuttle-Mir program and ISS. This is the passive variant, useful for permanent fixtures that won't have to form the active docking partner, such as berthing ports on station modules.
+
+		//	============================================================================
 		//	DECQ Apollo
 		//	============================================================================
 		//		ROC-ApolloRCS
@@ -99,6 +110,14 @@ Localization
 
 		//	============================================================================
 		//	BDB Apollo Block 3+
+		//	============================================================================
+		//		ROC-ApolloCADSActive
+		#rocApolloCADSActiveTitle = Apollo Block IV CADS Active Docking Port
+		#rocApolloCADSActiveDesc = Common Androgynous Docking Port. Developed to eliminate the limitations of the gendered Apollo docking system, as well as provide a larger passageway for delivering cargo. Equipped with a deployable capture ring to dampen impact. Permanent station ports can use the passive version, which is simpler and lighter.
+		//	============================================================================
+		//		ROC-ApolloCADSPassive
+		#rocApolloCADSPassiveTitle = Apollo Block IV CADS Passive Docking Port
+		#rocApolloCADSPassiveDesc = Common Androgynous Docking Port. Developed to eliminate the limitations of the gendered Apollo docking system, as well as provide a larger passageway for delivering cargo. Equipped with a deployable capture ring to dampen impact. Permanent station ports can use the passive version, which is simpler and lighter.
 		//	============================================================================
 		//		ROC-ApolloCMBDBBlockIII
 		#rocApolloCMBDBBlockIIIDesc = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
