--- a/GameData/ROCapsules/PartConfigs/APAS/APAS_Activev2.cfg
+++ b/GameData/ROCapsules/PartConfigs/APAS/APAS_Activev2.cfg
@@ -25,12 +25,12 @@ PART
 	cost = 3500
 	category = Coupling
 	subcategory = 0
-	title = APAS 89/95 Active Docking Port
+	title = #rocAPAS8995ATitle	//APAS 89/95 Active Docking Port
 	manufacturer = #roMfrNPOEnergia
-	description = Androgynous Peripheral Attach System developed for the Shuttle-Mir program and ISS. This is the active variant, with a deployable capture ring to align the ports and dampen the impact.
+	description = #rocAPAS8995ADesc
 
 	// --- standard part parameters ---
-	mass = 0.310
+	mass = 0.286
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
@@ -45,7 +45,7 @@ PART
 	skinTempTag = Aluminum
 	internalTempTag = Instruments
 
-	tags = ISS APAS docking PMA tantares loaf bread apollo kane ets
+	tags = ISS APAS 89 95 docking PMA apollo shuttle buran
 
 	NODE
 	{
