--- a/GameData/ROCapsules/PartConfigs/APAS/APAS_Passivev2.cfg
+++ b/GameData/ROCapsules/PartConfigs/APAS/APAS_Passivev2.cfg
@@ -25,13 +25,13 @@ PART
 	cost = 3000
 	category = Coupling
 	subcategory = 0
-	title = APAS 89/95 Passive Docking Port
+	title = #rocAPAS8995PTitle	//APAS 89/95 Passive Docking Port
 	manufacturer = #roMfrNPOEnergia
-	description = Androgynous Peripheral Attach System developed for the Shuttle-Mir program and ISS. This is the passive variant, useful for permanent fixtures that won't have to form the active docking partner, such as berthing ports on station modules.
+	description = #rocAPAS8995PDesc
 
 
 	// --- standard part parameters ---
-	mass = 0.286
+	mass = 0.200
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
@@ -46,7 +46,7 @@ PART
 	skinTempTag = Aluminum
 	internalTempTag = Instruments
 	
-	tags = ISS APAS docking PMA tantares loaf bread apollo kane ets
+	tags = ISS APAS 89 95 docking PMA apollo shuttle buran
 
 	NODE
 	{
