--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCADSActive.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCADSActive.cfg
@@ -26,9 +26,9 @@ PART
 	cost = 3500
 	category = Coupling
 	subcategory = 0
-	title = Apollo Block IV CADS Active Docking Port
+	title = #rocApolloCADSActiveTitle	//Apollo Block IV CADS Active Docking Port
 	manufacturer = #roMfrRockwell
-	description = Common Androgynous Docking Port. Developed to eliminate the limitations of the gendered Apollo docking system, as well as provide a larger passageway for delivering cargo. Equipped with a deployable capture ring to dampen impact. Permanent station ports can use the passive version, which is simpler and lighter.
+	description = #rocApolloCADSActiveDesc
 
 	// --- standard part parameters ---
 	mass = 0.311
@@ -46,7 +46,7 @@ PART
 	skinTempTag = Aluminum
 	internalTempTag = Instruments
 
-	tags = ISS APAS docking PMA tantares loaf bread apollo kane ets
+	tags = ISS APAS docking PMA apollo ets cbm common berthing mechanism
 
 	MODULE
 	{
