Increase Mercury thermal mass a little
Since we know the mass of Mercury's skin, manually set it to the correct value rather than relying on KSP to calculate it correctly.

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -226,7 +226,7 @@ PART
 	//Peak temp on Walls: ~977 K
 	//Peak temp on forward surfaces: ~600 K
 	//Peak interior temp: ~315 K
-	skinMassPerArea = 3.38				//Rene 41 8.24 ton/m^3. 0.41 mm Rene 41, 3.38 kg/m^2?
+	skinMassPerArea = 5.24				//Rene 41 8.24 ton/m^3. 0.41 mm Rene 41, 3.38 kg/m^2? KSP skin area calculations dubious. Increase so skin mass ~= 126 lbs (from mass schedule).
 
 	//Titanium structure with Rene 41 shingles. Tiles isloated from structure with spacers, and had gold coating on inside to minimize radiation.
 	skinTempTag = Inconel
