--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
@@ -44,6 +44,18 @@ PART
 
 	tags = ?gemina MOL MOS Gemini base cabin (can outpost passenger statio tour tuna ferry sm service module big g
 
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		hasHibernation = True
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.50
+		}
+	}
+
 	INTERNAL
 	{
 		name = crewCabinInternals
