Decrease LM power draw to historical(?) levels
Decrease LM power draw so it lasts 75+ hrs with J-class batteries

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
@@ -406,7 +406,7 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 1.525
+			rate = 0.763	//1.525 decrease so LM lives advertised 75 hr+ with J-class batteries
 		}
 	}
 
