LM Taxi and Truck
LM Taxi and Truck parts, also fix some config errors on LM ascent stage

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/ApolloDrogueDockPortBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/ApolloDrogueDockPortBDB.cfg
@@ -37,7 +37,7 @@ PART
 	category = Coupling
 	subcategory = 0
 	
-	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, dock, port, docking
+	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, dock, port, docking, lm, lem
 	
 	TechRequired = unlockParts
 	cost = 150
