--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMAscentTaxiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMAscentTaxiBDB.cfg
@@ -29,9 +29,9 @@ PART
 	cost = 150
 	category = Pods
 	subcategory = 0
-	title = LM Taxi Ascent Stage
+	title = AES LM Taxi Ascent Stage
 	manufacturer = #roMfrGrumman
-	description = The LM Taxi Ascent Stage Cockpit provides accommodations for up to three Kerbals to ride to the Moon's surface atop the LM Decent Stage, perform an extended surface stay, then return to orbit. During surface operations, the Taxi is shut down and put in a dormant state to save resources, while the crew operates out of a separately landed shelter. Includes radiators and deployable insulation for the dormancy period. Remember to have all crew members on board before launching.
+	description = The LM Taxi Ascent Stage Cockpit provides accommodations for up to three crew to ride to the Moon's surface atop the LM Decent Stage, perform an extended surface stay, then return to orbit. During surface operations, the Taxi is shut down and put in a dormant state to save resources, while the crew operates out of a separately landed shelter. Includes radiators and deployable insulation for the dormancy period. Remember to have all crew members on board before launching. Due to low performance with 3 crewmembers, it is recommended to leave behind all equipment before launching.
 
 	vesselType = Lander
 	stagingIcon = RCS_MODULE
@@ -230,17 +230,17 @@ PART
 		//Propellant: 5746.2 lbs
 		TANK
 		{
-			// 167.0 lbs RCS + 2,014.1 lbs main
+			// 173.3 lbs RCS + 2,014.1 lbs main
 			name = Aerozine50
-			amount = 1099.26
-			maxAmount = 1099.26
+			amount = 1102.4
+			maxAmount = 1102.4
 		}
 		TANK
 		{
-			// 342.5 lbs RCS + 3,222.6 lbs main
+			// 336.2 lbs RCS + 3,222.6 lbs main
 			name = MON1
-			amount = 1127.61
-			maxAmount = 1127.61
+			amount = 1125.6
+			maxAmount = 1125.6
 		}
 		TANK
 		{
@@ -334,6 +334,20 @@ PART
 	}
 }
 
+//	==================================================
+//	Apollo Lunar Module ascent stage.
+
+//	Internal space configuration.
+//	==================================================
+
+@INTERNAL[ROC-LEMTaxiInternal]:AFTER[RealismOverhaul]
+{
+	@MODULE[InternalSeat],*
+	{
+		%allowCrewHelmet = False
+		%kerbalEyeOffset = 0.0, 0.0, 0.0
+	}
+}
 
 //	================================================================================
 //	TAC Life Support Compatibility
@@ -341,7 +355,7 @@ PART
 
 @PART[ROC-LEMAscentTaxiBDB]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
 {
-	@description ^= :$: Supports a crew of three for up to 46 hours of active operations.
+	@description ^= :$: Supports a crew of three for up to 46 hours of active operations, but excess water should be removed from the descent stage.
 
 	//remove same mass as standard LM since this is based on standard LM, just with some parts omitted
 	@mass -= 0.08502		//-72.27 kg (LS Resources) - 12.75 kg (LS Tanks)
@@ -440,6 +454,192 @@ PART
 }
 
 //	================================================================================
+//	Add RasterPropMonitorComputer Module
+//	================================================================================
+
+@PART[ROC-LEMAscentTaxiBDB]:NEEDS[RasterPropMonitor]
+{
+	MODULE
+	{
+		name = RasterPropMonitorComputer
+		storedStrings = v 0.2.0.0|15.01.2017|	LEM	   |LUNAR|CREW VEHICLE|SQD002002-A1|SSS-DG|		 DECQ  &   Dragon01
+		//triggeredEvents = ALCOR_CALLRECOVERYTEAM
+		RPM_COLOROVERRIDE
+		{
+			// NASA gauge ----------------------------------------------
+			COLORDEFINITION
+			{
+				name = ASET_NASAGAUGESCALE_ACTIVECOLOR
+				color= 144,139,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NASAGAUGEHAND_ACTIVECOLOR
+				color= 184,179,148,255
+			}
+
+			// ASET aircraft instruments -----------------------------
+			// round gauge backlight
+			COLORDEFINITION
+			{
+				name = ASET_AIRCRAFTGAUGESCALE_ACTIVECOLOR //light on
+				color = 144,139,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_AIRCRAFTGAUGEHAND_ACTIVECOLOR //light on
+				color =184,179,148,255
+			}
+
+			// switchers -------------------------------------------------
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_NAME_POSITIVECOLOR
+				color= 184,179,158,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_STATE_POSITIVECOLOR
+				color= 154,149,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_BORDER_POSITIVECOLOR
+				color= 134,129,98,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_MARK_POSITIVECOLOR
+				color= 194,189,158,255
+			}
+
+			// LEDs off
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_LEDS_POSITIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_LEDS_ZEROCOLOR
+				color= 0,0,0,255
+			}
+
+			// Numeric Input display ---------------------------------------
+			// background
+			COLORDEFINITION
+			{
+					name = ASET_NUMINPUT_DISPLAY_DIFFUSE_ACTIVECOLOR
+					color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+					name = ASET_NUMINPUT_DISPLAY_DIFFUSE_PASSIVECOLOR
+					color= 0,40,0,255
+			}
+
+			COLORDEFINITION
+			{
+					name = ASET_NUMINPUT_DISPLAY_EMISSIVE_ACTIVECOLOR
+					color= 0,40,0,255
+			}
+			COLORDEFINITION
+			{
+					name = ASET_NUMINPUT_DISPLAY_EMISSIVE_PASSIVECOLOR
+					color= 0,0,0,255
+			}
+
+			// readout
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_POSITIVECOLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_ZEROCOLOR
+				color= 0,55,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_GHOSTCOLOR
+				color= 0,255,0,90
+			}
+
+			// digital indicator --------------------------------
+			// readout
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_NORMAL_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_WARNING_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_STBY_COLOR
+				color= 0,255,0,120
+			}
+
+			// legend
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_LEGEND_NORMAL_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_LEGEND_STBY_COLOR
+				color= 0,255,0,120
+			}
+
+			// label plate ---------------------------------------------
+			// background
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_DIFFUSE_PASSIVECOLOR
+				color= 80,80,80,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_DIFFUSE_ACTIVECOLOR
+				color= 80,80,80,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_EMISSIVE_PASSIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_EMISSIVE_ACTIVECOLOR
+				color= 0,0,0,255
+			}
+
+			// label text
+			COLORDEFINITION
+			{
+				name = ASET_PLATETEXT_POSITIVECOLOR
+				color= 174,169,138,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATETEXT_ZEROCOLOR
+				color= 255,255,255,255
+			}
+		}
+	}
+}
+
+//	================================================================================
 //	Configure RealAntennas
 //	================================================================================
 
@@ -490,6 +690,5 @@ PART
 		seatTransformName = seat1
 		kerbalScale = 1.0, 1.0, 1.0
 		kerbalOffset = 0.4, 0, -0.5
-		kerbalEyeOffset = 0, 0, -0.2
 	}
 }
