Remove `%` in base part configs

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
@@ -183,9 +183,9 @@ PART
 		fxOffset = 0, 0, 0
 		staging = false
 		
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
+		ullage = False
+		pressureFed = False
+		ignitions = 1
 		
 		PROPELLANT
 		{
