--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
@@ -57,9 +57,9 @@ PART
 		fxOffset = 0, 0, 0
 		staging = True
 		
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
+		ullage = False
+		pressureFed = False
+		ignitions = 1
 	}
 
 	//Should provide 15 ft/s (~4.5 m/s) to Mercury spacecraft
