--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloLESBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloLESBDB.cfg
@@ -180,9 +180,9 @@ PART
 		fxOffset = 0, 0, 0.15
 		stagingEnabled = False
 		
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
+		ullage = False
+		pressureFed = False
+		ignitions = 1
 		
 		PROPELLANT
 		{
@@ -222,9 +222,9 @@ PART
 		fxOffset = 0, 0, 0.15
 		stagingEnabled = True
 		
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
+		ullage = False
+		pressureFed = False
+		ignitions = 1
 		
 		//Let it consume the abort motor fuel. It's probably fine.
 		PROPELLANT
@@ -274,9 +274,9 @@ PART
 		fxOffset = 0, 0, 0.15
 		stagingEnabled = False
 		
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
+		ullage = False
+		pressureFed = False
+		ignitions = 1
 		
 		PROPELLANT
 		{
