--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiLES.cfg
@@ -110,9 +110,9 @@ PART
 		fxOffset = 0, 0, 0.15
 		staging = false
 		
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
+		ullage = False
+		pressureFed = False
+		ignitions = 1
 		
 		PROPELLANT
 		{
