--- a/GameData/ROCapsules/PartConfigs/Orion/OrionLAS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionLAS.cfg
@@ -117,9 +117,9 @@ PART
 			minThrust		= 1779.28
 			maxThrust		= 1779.28
 			heatProduction	= 100
-			%ullage			= false
-			%pressureFed	= false
-			%ignitions		= 1
+			ullage			= false
+			pressureFed	= false
+			ignitions		= 1
 
 			PROPELLANT
 			{
