--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiWing.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiWing.cfg
@@ -178,11 +178,6 @@ PART
 		reentryConductivity = 0.01
 		ablationTempThresh = 500
 	}
-	@MODULE[ModuleAblator]:NEEDS[DeadlyReentry]
-	{
-		@name = ModuleHeatShield
-		depletedMaxTemp = 1200
-	}
 	RESOURCE
 	{
 		name = Ablator
@@ -190,6 +185,16 @@ PART
 		maxAmount = 600
 	}
 }
+
+@PART[ROC-GeminiWing]
+{
+	@MODULE[ModuleAblator]:NEEDS[DeadlyReentry]
+	{
+		@name = ModuleHeatShield
+		depletedMaxTemp = 1200
+	}
+}
+
 //	===========================================================================
 //	Texture Variants
 //	===========================================================================
